eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 763807880171.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank.kierquebral.com:6ac63e6bc88aafa8cd806f802f615b3e1140f203
        ports:
        - containerPort: 8080
